--- a/lab01/lab01.html
+++ b/lab01/lab01.html
@@ -30,5 +30,8 @@
     <br clear="all">
     <h2>Time table</h2>
     <hr size="5" color="#7DCEA0">
+    <table>
+        <tr><th></th></tr>
+    </table>
 </body>
 </html>
