--- a/lab01/lab01.html
+++ b/lab01/lab01.html
@@ -30,8 +30,18 @@
     <br clear="all">
     <h2>Time table</h2>
     <hr size="5" color="#7DCEA0">
+    <table width="300" height="100">
+        <tr bgcolor="#909497"><th> </th><th> </th><th> </th></tr>
+        <tr bgcolor="#CACFD2"><td> </td><td> </td><td> </td></tr>
+        <tr bgcolor="#F2F3F4"><td> </td><td> </td><td> </td></tr>
+    </table>
+    <h3>Form Example</h3>
+    <hr size="5" color="#7DCEA0">
     <table>
-        <tr><th></th></tr>
+    <tr><td>&nbsp; Your Name:</td><td><input type="text"></td></tr>
+    <tr><td>&nbsp; Your e-mail:</td><td><input type="text"></td></tr>
+    <tr><td style="vertical-align:top">&nbsp; Comments:</td><td><textarea cols="40" rows="10"></textarea></td></tr>
+    <tr><td></td><td><button type="button">Send message</button></td></tr>
     </table>
 </body>
 </html>
