--- a/lab01/lab01.html
+++ b/lab01/lab01.html
@@ -34,7 +34,7 @@
 
     <div class="item1">
     <h1><font face="arial">My site</font></h1>
-    <hr size="5" color="#7DCEA0">
+    <hr style="height:5px ;width: 500px;" color="#7DCEA0" align="left">
     <p>Lorem ipsum dolor sit amet, consecteture adipiscing elit. Proin id tellus</p>
     <p>Nam accumsan tincidunt quam. Cumsociis natoque penatibus et magnis</p>
     <p>dis parturient montes, nascetur ridiculus mus. Donec sed est ut felis</p>
@@ -43,7 +43,7 @@
     <p>molestie. Vestibulum lacinia viverra nisl. Praesent rutrum varius justo.</p>
     <p>Mauris feugiat</p><br>
     <h2>Image In Text</h2>
-    <hr size="5" color="#7DCEA0">
+    <hr style="height:5px ;width: 500px;" color="#7DCEA0" align="left">
     <img src="img/apple.jpg" alt="apple" border="1" width="35%" height="15%" style="float:left;">
     Lorem ipsum dolor sit amet,<br>
     consectetuer adipiscing elit. Proin id<br>
@@ -54,14 +54,14 @@
     semper.<br>
     <br clear="all">
     <h2>Time table</h2>
-    <hr size="5" color="#7DCEA0">
+    <hr style="height:5px ;width: 500px;" color="#7DCEA0" align="left">
     <table width="300" height="100">
         <tr bgcolor="#909497"><th> </th><th> </th><th> </th></tr>
         <tr bgcolor="#CACFD2"><td> </td><td> </td><td> </td></tr>
         <tr bgcolor="#F2F3F4"><td> </td><td> </td><td> </td></tr>
     </table>
     <h3>Form Example</h3>
-    <hr size="5" color="#7DCEA0">
+    <hr style="height:5px ;width: 500px;" color="#7DCEA0" align="left">
     <table>
     <tr><td>&nbsp; Your Name:</td><td><input type="text"></td></tr>
     <tr><td>&nbsp; Your e-mail:</td><td><input type="text"></td></tr>
