--- a/lab03/food.html
+++ b/lab03/food.html
@@ -8,48 +8,58 @@
     <link rel="stylesheet" type="text/css" href="css/mystyle.css">
 </head>
 <body class="fbody">
-<p class="foodp">เมนูอาหาร</p>
+<p class="foodphead">เมนูอาหาร</p>
 <table class="foodtable">
-    <tr><td><img class="center" src="images/1.png" alt="ผักกาดขาวห่อหมู"></td></tr>
-    <tr><td><p class="foodp">เมนูที่ 1 ผักกาดขาวห่อหมู</p></td></tr>
-    <tr><td><p class="foodpp">หมูสับห่อด้วยผักกาดขาวนึ่งร้อนๆ</p></td></tr>
-    <tr><td><p class="foodp"></p></td></tr>
-    <tr><td><img class="center" src="images/2.jpg" alt="ไข่เจียวพระอาทิตย์"></td></tr>
-    <tr><td><p class="foodp">เมนูที่ 2 ไข่เจียวพระอาทิตย์</p></td></tr>
-    <tr><td><p class="foodpp">ไข่เจียวใส่หมูสับและข้าวสวยเนื้อไข่กรอบหอม</p></td></tr>
-    <tr><td><p class="foodp"></p></td></tr>
-    <tr><td><img class="center" src="images/3.jpg" alt="ไก่ทอดเกลือ"></td></tr>
-    <tr><td><p class="foodp">เมนูที่ 3 ไก่ทอดเกลือ</p></td></tr>
-    <tr><td><p class="foodpp">ไก่ทอดเกลือทอดกรอบๆเสริฟพร้อมน้ำจิ้ม</p></td></tr>
-    <tr><td><p class="foodp"></p></td></tr>
-    <tr><td><img class="center" src="images/4.jpg" alt="หมูผัดพริกขิง"></td></tr>
-    <tr><td><p class="foodp">เมนูที่ 4 หมูผัดพริกขิง</p></td></tr>
-    <tr><td><p class="foodpp">หมูหั่นชิ้นผัดกับพริกและขิงให้รสจัดจ้านในย่านนี้</p></td></tr>
-    <tr><td><p class="foodp"></p></td></tr>
-    <tr><td><img class="center" src="images/5.jpg" alt="สลัดอกไก่ย่าง"></td></tr>
-    <tr><td><p class="foodp">เมนูที่ 5 สลัดอกไก่ย่าง</p></td></tr>
-    <tr><td><p class="foodpp">อกไก่ย่างแล่เสริฟพร้อมสลัดเมนูสำหรับคนเฮลตี้</p></td></tr>
-    <tr><td><p class="foodp"></p></td></tr>
-    <tr><td><img class="center" src="images/6.jpg" alt="ไข่ตุ๋นหมูสับ"></td></tr>
-    <tr><td><p class="foodp">เมนูที่ 6 ไข่ตุ๋นทรงเครื่อง</p></td></tr>
-    <tr><td><p class="foodpp">ไข่ตุ๋นทรงใส่หมูสับและผักนาๆชนิดทำให้หวนคิดถึงสมัยเด็กๆ</p></td></tr>
-    <tr><td><p class="foodp"></p></td></tr>
-    <tr><td><img class="center" src="images/7.jpg" alt="ข้าวผัดไมโครเวฟ"></td></tr>
-    <tr><td><p class="foodp">เมนูที่ 7 ข้าวผัดไมโครเวฟ</p></td></tr>
-    <tr><td><p class="foodpp">ข้าวผัดง่ายๆทำได้ใน&nbsp;5&nbsp;นาที&nbsp;แถมยังอร่อยอีกด้วย</p></td></tr>
-    <tr><td><p class="foodp"></p></td></tr>
-    <tr><td><img class="center" src="images/8.jpg" alt="ยำหมูสะดุ้ง"></td></tr>
-    <tr><td><p class="foodp">เมนูที่ 8 ยำหมูสะดุ้ง</p></td></tr>
-    <tr><td><p class="foodpp">เนื้อหมูสไลด์บางลวกแล้วนำมายำพร้อมกับเครื่องยำที่แค่คิดก็น้ำลายสอ</p></td></tr>
-    <tr><td><p class="foodp"></p></td></tr>
-    <tr><td><img class="center" src="images/9.jpg" alt="บราวนี่ถั่วแดง"></td></tr>
-    <tr><td><p class="foodp">เมนูที่ 9 บราวนี่ถั่วแดง</p></td></tr>
-    <tr><td><p class="foodpp">บราวนี่เหนียวหนึบกลิ่นหอมจะกินเฉยๆก็อร่อยจะกินกับนมก็เข้ากันสุดๆ</p></td></tr>
-    <tr><td><p class="foodp"></p></td></tr>
-    <tr><td><img class="center" src="images/10.jpg" alt="เค้กแอปเปิ้ล"></td></tr>
-    <tr><td><p class="foodp">เมนูที่ 10 เค้กแอปเปิ้ล</p></td></tr>
-    <tr><td><p class="foodpp">เค้กเนื้อนุ่มละมุนหอมกลิ่นแอปเปิ้ลให้กลิ่นหอมและรสชาติแอปเปิ้ลเมื่อกัด</p></td></tr>
-    <tr><td><p class="foodp"></p></td></tr>
+    <tr class="trblink"><td>
+        <img class="foodimg" src="images/1.png" alt="ผักกาดขาวห่อหมู">
+        <p class="foodp">เมนูที่ 1 ผักกาดขาวห่อหมู</p>
+        <p class="foodpp">หมูสับห่อด้วยผักกาดขาวนึ่งร้อนๆรสชาติแห่งธรรมชาติที่ลงตัวแบบสุดๆ</p>
+    </td></tr>
+    <tr class="trblink"><td>
+        <img class="foodimg" src="images/2.jpg" alt="ไข่เจียวพระอาทิตย์">
+        <p class="foodp">เมนูที่ 2 ไข่เจียวพระอาทิตย์</p>
+        <p class="foodpp">ไข่เจียวใส่หมูสับและข้าวสวยเนื้อไข่กรอบหอมรับประทานแล้วนึกถึงหน้าพ่อแม่ขึ้นมาทันทีทันใด</p>
+    </td></tr>
+    <tr class="trblink"><td>
+        <img class="foodimg" src="images/3.jpg" alt="ไก่ทอดเกลือ">
+        <p class="foodp">เมนูที่ 3 ไก่ทอดเกลือ</p>
+        <p class="foodpp">ไก่ทอดเกลือทอดกรอบๆเสริฟพร้อมน้ำจิ้ม</p>
+    </td></tr>
+    <tr class="trblink"><td>
+        <img class="foodimg" src="images/4.jpg" alt="หมูผัดพริกขิง">
+        <p class="foodp">เมนูที่ 4 หมูผัดพริกขิง</p>
+        <p class="foodpp">หมูหั่นชิ้นผัดกับพริกและขิงให้รสจัดจ้านในย่านนี้</p>
+    </td></tr>
+    <tr class="trblink"><td>
+        <img class="foodimg" src="images/5.jpg" alt="สลัดอกไก่ย่าง">
+        <p class="foodp">เมนูที่ 5 สลัดอกไก่ย่าง</p>
+        <p class="foodpp">อกไก่ย่างแล่เสริฟพร้อมสลัดเมนูสุดแสนอร่อยสำหรับนักกินสาบสุขภาพ</p>
+    </td></tr>
+    <tr class="trblink"><td>
+        <img class="foodimg" src="images/6.jpg" alt="ไข่ตุ๋นหมูสับ">
+        <p class="foodp">เมนูที่ 6 ไข่ตุ๋นทรงเครื่อง</p>
+        <p class="foodpp">ไข่ตุ๋นทรงใส่หมูสับและผักนาๆชนิดทำให้หวนคิดถึงสมัยเด็กๆ</p>
+    </td></tr>
+    <tr class="trblink"><td>
+        <img class="foodimg" src="images/7.jpg" alt="ข้าวผัดไมโครเวฟ">
+        <p class="foodp">เมนูที่ 7 ข้าวผัดไมโครเวฟ</p>
+        <p class="foodpp">ข้าวผัดง่ายๆทำได้ใน&nbsp;5&nbsp;นาที&nbsp;แถมยังอร่อยอีกด้วย</p>
+    </td></tr>
+    <tr class="trblink"><td>
+        <img class="foodimg" src="images/8.jpg" alt="ยำหมูสะดุ้ง">
+        <p class="foodp">เมนูที่ 8 ยำหมูสะดุ้ง</p>
+        <p class="foodpp">เนื้อหมูสไลด์บางลวกแล้วนำมายำพร้อมกับเครื่องยำที่แค่คิดก็น้ำลายสอ</p>
+    </td></tr>
+    <tr class="trblink"><td>
+        <img class="foodimg" src="images/9.jpg" alt="บราวนี่ถั่วแดง">
+        <p class="foodp">เมนูที่ 9 บราวนี่ถั่วแดง</p>
+        <p class="foodpp">บราวนี่เหนียวหนึบกลิ่นหอมจะกินเฉยๆก็อร่อยจะกินกับนมก็เข้ากันสุดๆ</p>
+    </td></tr>
+    <tr class="trblink"><td>
+        <img class="foodimg" src="images/10.jpg" alt="เค้กแอปเปิ้ล">
+        <p class="foodp">เมนูที่ 10 เค้กแอปเปิ้ล</p>
+        <p class="foodpp">เค้กเนื้อนุ่มละมุนหอมกลิ่นแอปเปิ้ลให้กลิ่นหอมและรสชาติแอปเปิ้ลเมื่อกัด</p>
+    </td></tr>
 </table>
 </body>
 </html>
